manifests/cic-meta/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cic-meta-server
  labels:
    app: cic-meta-server
spec:
  selector:
    matchLabels:
      app: cic-meta-server
  replicas: 1
  template:
    metadata:
      labels:
        app: cic-meta-server
        group: cic-stack
    spec:
      containers:
        - name: cic-meta-server
          image: registry.gitlab.com/grassrootseconomics/cic-internal-integration/cic-meta:0.5.88
          ports:
            - containerPort: 8000
              name: cic-meta-server
          volumeMounts:
            - mountPath: /keys
              readOnly: true
              name: pgp
      volumes:
        - name: pgp
          secret:
            secretName: pgp-keys
      restartPolicy: Always
