manifests/cic-meta/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: meta
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`meta.sarafu.network`)
      kind: Rule
      services:
        - name: cic-meta-server
          port: http
  tls:
    secretName: meta.sarafu.network.cert
